Add help command, improve PT copy

--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -18,5 +18,7 @@
     "🎂 Que dia épico! {{pronounUp}} *{{name}}* faz hoje {{age}} anos! 🥳🎉 Parabéns {{name}} ❤️",
     "🎂 {{pronounUp}} noss{{pronoun}} *{{name}}* faz hoje {{age}} anos! 🥳🎉 Parabéns {{name}} ❤️"
   ],
-  "welcomeGroup": "Ola a todos, bom conhecer-vos *{{chatTitle}}*!\n\nEu sou um prestavel bot que vos recorda daquelas datas importantes por vezes esquecidas - aniversarios dos vossos amigos! Comecem por adicionar pessoas com o comando `/add` com o nome e data separado por virgulas, por exemplo, `/add Samuel, 1994-03-21`. Podem ver toda a gente com o `/aniversarios`, o ranking das idades em `/idades` e o proximo a fazer anos: `/proximo`.\n\nNo dia do vosso aniversario, poderao ainda ter uma insesperada mensagem"
+  "welcomeGroup": "👋 *{{chatTitle}}*!\nSou um simpatico bot 🤖 que vos ajuda a registar todas as datas de aniversario dos membros deste grupo. Para saberem mais sobre os comandos disponiveis, facam /help.",
+
+  "helpMessage": "Estes sao os comandos que podem usar:\n - /add - Para adicionar um aniversariantem, com nome e data separado por virgulas (por exemplo, `/add Samuel, 1994-03-21`)\n - /remove - Para remover um aniversariante (`/remove Pedro`)\n - /aniversarios - Lista de aniversariantes, ordenado pelo proximo a fazer anos.\n - /idades - Lista por idades.\n - /proximo - Mostra mais informacoes sobre o proximo aniversario."
 }
