Implement next and all birthdays with magic command

--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -15,6 +15,7 @@
   "errors": {
     "notAdmin": "Apenas administradores do grupo podem correr este comando!",
     "notUnderstood": "Desculpa, nao percebi.",
+    "needGroup": "Este comando so funciona num grupo.",
     "validation": {
       "dateMissing": "Nao consegui perceber a data do aniversario, tenta novamente.",
       "dateInvalid": "Nao consegui perceber a data de nascimento, tenta novamente please.",
