Makes the trigger notification time configurable
Couple of changes:
 - adds a command to get/set group configuration. restricted to getting
   and setting notification hour and whether non admins can add and
remove birthdays
 - makes the trigger respect this config if set
 - also added support for a env var to globally control the default hour
   notifications are triggered from
 - THE NOTIFICATION HOUR IS NOW UTC

--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -10,6 +10,12 @@
     },
     "add": {
       "success": "Aniversariante adicionado: {{name}} — {{date}}."
+    },
+    "config": {
+      "notfound": "Configuracao invalida.",
+      "error": "Erro ao obter a configuracao para o grupo.",
+      "saved": "Configuracao actualizada com sucesso",
+      "errorParsingHour": "Hora invalida - deve ser um numero 0-23."
     }
   },
   "errors": {
