--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -19,7 +19,7 @@
     "config": {
       "notfound": "Configuracao invalida.",
       "error": "Erro ao obter a configuracao para o grupo.",
-      "saved": "Configuracao actualizada com sucesso",
+      "saved": "Configuracao actualizada com sucesso.",
       "errorParsingHour": "Hora invalida - deve ser um numero 0-23."
     },
     "birthdays": {
