--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -21,7 +21,7 @@
       "errorParsingHour": "Error parsing the notification hour - must be a number between 0 - 23."
     },
     "birthdays": {
-      "sentence": "`{{name}}`, turns *{{nextAge}}* years old on {{day}} ({{daysToBirthdayStr}})"
+      "sentence": "`{{name}}`, turns *{{count}}* years old on {{day}} ({{daysToBirthdayStr}})"
     }
   },
   "errors": {
