--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -15,7 +15,7 @@
       "restrictedToAdmins": "그룹 관리자만 생일자를 추가하거나 제거할 수 있습니다."
     },
     "birthdays": {
-      "sentence": "`{{name}}` 님이 {{day}}에 *{{nextAge}}*살이 됩니다 ({{daysToBirthdayStr}})"
+      "sentence": "`{{name}}` 님이 {{day}}에 *{{count}}*살이 됩니다 ({{daysToBirthdayStr}})"
     }
   },
   "errors": {
