--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,60 +1,62 @@
 {
   "commands": {
     "remove": {
-      "missingName": "You need to supply a name, eg: `/remove Pedro`",
-      "missingGroup": "Missing group ID: `/remove Pedro, -123456789`",
-      "success": "Birthday removed: {{name}} — {{date}}.",
-      "notFound": "I couldn't find that birthday.",
-      "error": "Error while removing birthday."
+      "missingName": "The command needs to be executed with the name of the birthday person: `/remove Pedro`",
+      "missingGroup": "Group ID is missing: `/remove Pedro, -123456789`",
+      "success": "Birthday person removed: {{name}} — {{date}}.",
+      "notFound": "I couldn't find that birthday person.",
+      "error": "Error removing the birthday person."
     },
     "add": {
-      "missingData": "Please provide the name and birthdate in the following format: `/add Jonas, 1984-03-30`",
-      "missingDataWithGroupId": "Please provide the name, birthdate, and group ID in the following format: `/add Jonas, 1984-03-30, -12345`",
+      "success": "Birthday person added: {{name}} — {{date}}.",
+      "missingData": "Please provide the name and birthday in the following format: `/add Jonas, 1984-03-30`",
+      "missingDataWithGroupId": "Please provide the name, birthday, and group ID in the following format: `/add Jonas, 1984-03-30, -12345`",
       "errorParsingDate": "The date format is invalid. Please use YYYY-MM-DD, for example: `/add Saul, 1989-01-31`",
       "success": "Birthday person added: {{name}} — {{date}}.",
-      "restrictedToAdmins": "Sorry, only group adminis can add and remove birthdays."
+      "restrictedToAdmins": "Only group administrators can add and remove birthday persons.",
+      "alreadyExists": "A birthday person with that name already exists."
     },
     "config": {
-      "notfound": "Invalid config key.",
-      "error": "Could not get the groups configuration, sorry.",
-      "saved": "Config updated successfully.",
-      "errorParsingHour": "Error parsing the notification hour - must be a number between 0 - 23."
+      "notfound": "Invalid configuration.",
+      "error": "Error obtaining the configuration for the group.",
+      "saved": "Configuration updated successfully.",
+      "errorParsingHour": "Invalid hour - it must be a number between 0-23.",
+      "languageError": "Language `{{language}}` not supported."
     },
     "birthdays": {
-      "sentence": "`{{name}}`, turns *{{count}}* years old on {{day}} ({{daysToBirthdayStr}})"
+      "sentence_one": "`{{name}}`, turns *{{count}}* year old on {{day}} ({{daysToBirthdayStr}})",
+      "sentence_other": "`{{name}}`, turns *{{count}}* years old on {{day}} ({{daysToBirthdayStr}})"
     }
   },
   "errors": {
     "empty": "No birthdays added.",
-    "notAdmin": "Sorry, only group adminis can run this command.",
+    "notAdmin": "Only group administrators can run this command!",
     "notUnderstood": "Sorry, I didn't understand.",
     "needGroup": "This command only works in a group.",
-    "missingChatId": "Missing group ID - you need to supply one, when in a private chat.",
-    "invalidChatId": "The group ID (`{{chatId}}`) is invalid.",
+    "missingChatId": "Group ID is missing - it is necessary in a private chat.",
+    "invalidChatId": "The group ID (`{{chatId}}`) is invalid!",
     "internalError": "An error occurred: {{message}}",
     "internalErrorNoMessage": "An error occurred, please try again.",
     "validation": {
-      "dateMissing": "Birth date missing, please try again.",
-      "dateInvalid": "I couldn't understand the birth date, please try again using the YYYY-MM-DD format.",
-      "yearMissing": "Sorry, I didn't understand the birth date's year, please try again.",
-      "nameMissing": "Sorry, I didn't understand the birthday person's name, please try again."
+      "dateMissing": "I couldn't understand the birthday date, please try again.",
+      "dateInvalid": "I couldn't understand the birth date, please try again.",
+      "yearMissing": "Sorry, I didn't understand the birth year of the birthday person, please try again.",
+      "nameMissing": "Sorry, I didn't understand the name of the birthday person, please try again."
     }
   },
   "messages": [
-    "🎂 Today's baby is *{{name}}* who turns {{age}} years old! 🥳🎉 Congratulations {{name}} ❤️",
-    "🎂 Today is the day of *{{name}}* celebrating {{age}} years! 🥳🎉 Many congratulations {{name}} ❤️",
-    "🎂 What an epic day! *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️",
-    "🎂 Our dear *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️"
+    "🎂 Today's baby is {{pronoun}} *{{name}}* who turns {{age}} years old! 🥳🎉 Congratulations {{name}} ❤️",
+    "🎂 Today is *{{name}}*'s day who celebrates {{age}} years! 🥳🎉 Congratulations {{name}} ❤️",
+    "🎂 What an epic day! {{pronounUp}} *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️",
+    "🎂 {{pronounUp}} our *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️"
   ],
   "words": {
     "days": "days",
     "day": "day",
     "today": "today! 🎉"
   },
-  "welcomeGroup": "👋 *{{chatTitle}}*!\nI'm a bot 🤖 that helps you keep track of all the birthdays of the members of this group. To learn more about the available commands, type /help.",
-
-  "helpMessage": "These are the commands you can use:\n - /add - To add a birthday person, with name and date separated by commas (for example, `/add Samuel, 1994-03-21`)\n - /remove - To remove a birthday person (`/remove Pedro`)\n - /birthdays - List of birthdays, sorted by the next one coming up.\n - /list - List by ages.\n - /next - Shows more information about the next birthday.\n - /birthdaybot - A conversational interface for the bot, just tell them what you want done! (eg, `/birthdaybot please add Samuel on the 21st of March 1994`)",
+  "welcomeGroup": "👋 *{{chatTitle}}*!\nI am a bot 🤖 that helps you register all the birthdays of the members of this group. To learn more about the available commands, type /help.",
+  "helpMessage": "These are the commands you can use:\n - /add - To add a birthday person, with name and date separated by commas (for example, `/add Samuel, 1994-03-21`)\n - /remove - To remove a birthday person (`/remove Pedro`)\n - /birthdays - List of birthday persons, ordered by the next one to have a birthday.\n - /ages - List by ages.\n - /next - Shows more information about the next birthday.\n - /birthdaybot - To tell the bot what you want it to do (for example, `/birthdaybot add Pedro on April 15, 1980`).",
   "unborn": "unborn",
   "inputNeeded": "Yes?..."
 }
-
