--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,8 +1,8 @@
 {
   "commands": {
     "remove": {
-      "missingName": "The command needs to be executed with the name of the birthday person: `/remove Pedro`",
-      "missingGroup": "Group ID is missing: `/remove Pedro, -123456789`",
+      "missingName": "The command needs to be executed with the name of the birthday person: `/remove Peter`",
+      "missingGroup": "Group ID is missing: `/remove Peter, -123456789`",
       "success": "Birthday person removed: {{name}} — {{date}}.",
       "notFound": "I couldn't find that birthday person.",
       "error": "Error removing the birthday person."
@@ -10,7 +10,7 @@
     "add": {
       "success": "Birthday person added: {{name}} — {{date}}.",
       "missingData": "Please provide the name and birthday in the following format: `/add Jonas, 1984-03-30`",
-      "missingDataWithGroupId": "Please provide the name, birthday, and group ID in the following format: `/add Jonas, 1984-03-30, -12345`",
+      "missingDataWithGroupId": "Please provide the name, birthday, and group ID in the following format: `/add Dave, 1984-03-30, -12345`",
       "errorParsingDate": "The date format is invalid. Please use YYYY-MM-DD, for example: `/add Saul, 1989-01-31`",
       "success": "Birthday person added: {{name}} — {{date}}.",
       "restrictedToAdmins": "Only group administrators can add and remove birthday persons.",
@@ -55,8 +55,9 @@
     "day": "day",
     "today": "today! 🎉"
   },
-  "welcomeGroup": "👋 *{{chatTitle}}*!\nI am a bot 🤖 that helps you register all the birthdays of the members of this group. To learn more about the available commands, type /help.",
-  "helpMessage": "These are the commands you can use:\n - /add - To add a birthday person, with name and date separated by commas (for example, `/add Samuel, 1994-03-21`)\n - /remove - To remove a birthday person (`/remove Pedro`)\n - /birthdays - List of birthday persons, ordered by the next one to have a birthday.\n - /ages - List by ages.\n - /next - Shows more information about the next birthday.\n - /birthdaybot - To tell the bot what you want it to do (for example, `/birthdaybot add Pedro on April 15, 1980`).",
+  "welcomeGroup": "👋 *{{chatTitle}}*!\nHi there! I'm a bot 🤖 here to help you remember everyone's birthdays. 🎉\n To learn more about what I can do, just type /help. Start by adding the first birthday by using the add command with the name and date separated by a comma (e.g., /add David, 1984-07-01)",
+  "helpMessage": "Here are the commands you can use:\n - /add - Add a new birthday with the name and date separated by a comma (eg, `/add Samuel, 1994-03-21`)\n - /remove - Remove a birthday (eg, `/remove David`)\n - /birthdays - Lists everyone's birthdays, sorted by the nearest date.\n - /ages - Lists everyone, sorted by age.\n - /next - Shows who has the next upcoming birthday!\n - /birthdaybot - Tell the bot what you want it to do (eg, `/birthdaybot add Peter on April 15, 1980`).\n - /config - Shows the current configuration for this group. If you are an admin, you can change it by separating the key and value with a comma. (eg, `/config language, en`)",
   "unborn": "unborn",
-  "inputNeeded": "Yes?..."
+  "inputNeeded": "Yes?...",
+  "configMessage": "This is the group config:\n\n \\- `language`: The bot's language: *{{language}}*\n \\- `notificationHour`: The earliest (24h format) the bot will send birthday notifications: *{{notificationHour}}*\n \\- `restrictedToAdmins`: Whether managing birthdays is limited to group administrators: *{{restrictedToAdmins}}*\n"
 }
