--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -45,10 +45,10 @@
     }
   },
   "messages": [
-    "🎂 Today's baby is {{pronoun}} *{{name}}* who turns {{age}} years old! 🥳🎉 Congratulations {{name}} ❤️",
+    "🎂 Today's baby is *{{name}}* who turns {{age}} years old! 🥳🎉 Congratulations {{name}} ❤️",
     "🎂 Today is *{{name}}*'s day who celebrates {{age}} years! 🥳🎉 Congratulations {{name}} ❤️",
-    "🎂 What an epic day! {{pronounUp}} *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️",
-    "🎂 {{pronounUp}} our *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️"
+    "🎂 What an epic day! *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️",
+    "🎂 Our *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️"
   ],
   "words": {
     "days": "days",
@@ -59,5 +59,5 @@
   "helpMessage": "Here are the commands you can use:\n - /add - Add a new birthday with the name and date separated by a comma (eg, `/add Samuel, 1994-03-21`)\n - /remove - Remove a birthday (eg, `/remove David`)\n - /birthdays - Lists everyone's birthdays, sorted by the nearest date.\n - /ages - Lists everyone, sorted by age.\n - /next - Shows who has the next upcoming birthday!\n - /birthdaybot - Tell the bot what you want it to do (eg, `/birthdaybot add Peter on April 15, 1980`).\n - /config - Shows the current configuration for this group. If you are an admin, you can change it by separating the key and value with a comma. (eg, `/config language, en`)",
   "unborn": "unborn",
   "inputNeeded": "Yes?...",
-  "configMessage": "Here's this the group's configuration:\n \\- `language`:  *{{language}}*\n \\- `notificationHour`: The earliest \\(24h format\\) the bot will send birthday notifications: *{{notificationHour}}*\n \\- `restrictedToAdmins`: Whether managing birthdays is limited to group administrators: *{{restrictedToAdmins}}*\n"
+  "configMessage": "Here's this the group's configuration:\n \\- `language`:  *{{language}}*\n \\- `notificationHour`: The earliest \\(24h format\\) the bot will send birthday notifications: *{{notificationHour}}h*\n \\- `restrictedToAdmins`: Whether managing birthdays is limited to group administrators: *{{restrictedToAdmins}}*\n"
 }
