--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -53,7 +53,8 @@
   "words": {
     "days": "일",
     "day": "일",
-    "today": "오늘! 🎉"
+    "today": "오늘! 🎉",
+    "tomorrow": "내일!"
   },
   "welcomeGroup": "👋 *{{chatTitle}}*!\n저는 이 그룹의 모든 멤버들의 생일을 등록하는 것을 도와주는 봇 🤖입니다. 사용 가능한 명령어에 대해 더 알고 싶으시면, /help를 입력해주세요.",
   "helpMessage": "사용할 수 있는 명령어는 다음과 같습니다:\n - /add - 생일자를 추가합니다, 이름과 날짜를 쉼표로 구분하여 입력하세요 (예: `/add Samuel, 1994-03-21`)\n - /remove - 생일자를 제거합니다 (`/remove Pedro`)\n - /birthdays - 생일자의 리스트, 다음 생일자가 있는 순서로 정렬됩니다.\n - /ages - 나이별로 정렬된 리스트입니다.\n - /next - 다음 생일에 대한 정보를 보여줍니다.\n - /birthdaybot - 봇에게 원하는 작업을 지시합니다 (예: `/birthdaybot 1980년 4월 15일에 Pedro를 추가`).",
